--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "npx patch-package"
   },
   "dependencies": {
     "@codeherence/react-native-header": "^0.11.0",
@@ -21,6 +22,7 @@
     "@types/react": "~18.2.14",
     "@types/react-native-material-ripple": "^0.9.6",
     "@types/react-native-snap-carousel": "^3.8.10",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~49.0.15",
     "expo-font": "^11.6.0",
     "expo-linear-gradient": "^12.5.0",
